Fix word break on footnotes

--- a/assets/_sass/components/_footnotes.scss
+++ b/assets/_sass/components/_footnotes.scss
@@ -6,7 +6,7 @@
 
   .post-content & p {
     @extend %footnotes;
-    word-break: break-all;
+    word-break: break-word;
   }
 
   a:not([class]) {
